src/test/deca/syntax/invalid/homemade/test/test_lex_inv_circular_include1-1.deca
// Test circular include
#include "test_lex_inv_circular_include1-2.deca"
{}